# k8srs

./: .gitignore  Cargo.toml  Makefile  readme.md
crates/kubectl-rs/: Cargo.toml
crates/kubectl-rs/src/: main.rs
k8s/: httpbin.yaml
