[workspace]
members = [
    "crates/kubectl-rs",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[workspace.dependencies]
# TODO: Check if these are the latest versions available
k8s-openapi = { version = "0.21.0", features = ["v1_28"] }
kube = { version = "0.88.0", features = ["runtime", "derive"] }
clap = { version = "4.4.18", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.79"
chrono = "0.4.34" 